--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,19 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        /*classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'*/
     }
 }
 
 allprojects {
     repositories {
         google()
+        maven {
+            url "https://jitpack.io"
+        }
         jcenter()
         maven {
             url "https://dl.bintray.com/hbdevmdm/maven"
